--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container class="example-container" *ngIf="true" [hasBackdrop]="false">
 
+  <!-- OVERVIEW SLIDE -->
   <mat-sidenav mode="over" [opened]="overview" style="width: 350px;">
     <mat-card (click)="goToSlide(i)" class="example-card" *ngFor="let item of appSlidesData; let i = index">
       <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
@@ -11,6 +12,8 @@
     <div class="container">
 
 
+
+      <!-- PRESENTATION -->
       <div *ngIf="!createPostIt" fxLayoutAlign="center center" class="col">
         <div class="presentation-box" [style]="slideBackground">
 
@@ -68,118 +71,135 @@
         </div>
       </div>
 
+
+      <!-- POST-ITS -->
       <div *ngIf="createPostIt" fxLayoutAlign="center center" class="col">
-        <div class="presentation-box">
 
-
-          <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary">
-            <div class="row">
-              <div class="col" style="color: white; font-size: 40px;font-family: Arial">
-                Brandstorm
-              </div>
-              <div class="col" style="color: white; font-size: 40px;font-family: Arial; right: -370px;">
-                Names
-              </div>
-            </div>
-          </mat-toolbar>
-
-         
-
-            <div class="col post-it-container" cdkDropList [cdkDropListData]="conceptData.concepts" (cdkDropListDropped)="drop($event)">
-             
-              <div class="row">
-
-                <mat-card style="width: 300px;margin: 5px;height: 310px;" cdkDrag cdkDragLockAxis="xy"
-                  *ngFor="let item of conceptData.concepts; let i = index;">
-
-                  <!-- TITLE -->
-
-                  <div style="background-color: white;height: 60px;overflow-x: hidden;width: 283px;word-break: break-all;">
-                    <div class="mat-h2">{{item.concept}}</div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- Brandstomr and Names toolbar -->
+              <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary">
+                <div class="row">
+                  <div class="col" style="color: white; font-size: 40px;font-family: Arial">
+                    Brandstorm
                   </div>
-
-
-                  <!-- HTML-CONTENT -->
-
-                  <mat-card-content style="width: 283px;height: 160px; overflow-y: scroll;background-color: white; overflow-x: hidden;">
-                    <div [innerHTML]="item.html"></div>
-                  </mat-card-content>
-
-                  <mat-card-actions fxLayoutAlign="end end">                 
-                    <button (click)="openDialog(i, 'edit')" mat-mini-fab class="post-button"  color="primary">
-                      <mat-icon style="font-size: 18px;">create</mat-icon>
-                    </button>
-                    <button (click)="openDialog(i, 'delete')" mat-mini-fab class="post-button"  color="primary">
-                      <mat-icon style="font-size: 20px;">cancel</mat-icon>
-                    </button>
-                  </mat-card-actions>
-
-                </mat-card>
-                 <!-- NAMES BOX -->
-
-              <div class="col" style="padding: 0px !important; margin: 0px !important;">
-                <div class="names-container">
-                  <div *ngFor="let  item of conceptData.concepts; let i = index">
-                    <span style="font-size:24px;margin: 10px;" matTooltip="Info about the action"
-                      matTooltipPosition="right">
-                      {{item.concept}}
-                    </span>
+                  <div class="col" style="color: white; font-size: 40px;font-family: Arial; right: -370px;">
+                    Names
                   </div>
                 </div>
-              </div>
-              </div>
-
-
-             
+              </mat-toolbar>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="row">
+                <div class="col-md-8">
 
-            <!-- MENU -->
-            
-            <mat-toolbar class="toolbar-postit mat-elevation-z4" *ngIf="mainMenu">
+                  <div class="presentation-box" style="overflow-y: scroll;">
 
-              <button (click)="home()" mat-icon-button aria-label="Example icon-button with a heart icon"
-                matTooltip="Info about the action" matTooltipPosition="above">
-                <mat-icon>home</mat-icon>
-              </button>
+                    <!-- POST_REPEATER -->
+                    <div class="row post-it-container" cdkDropList [cdkDropListData]="conceptData.concepts"
+                      (cdkDropListDropped)="drop($event)">
 
-              <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
-                <mat-icon>note_add</mat-icon>
-              </button>
+                      <mat-card style="width: 300px;margin: 5px;height: 310px;" cdkDrag cdkDragLockAxis="xy"
+                        *ngFor="let item of conceptData.concepts; let i = index;">
 
-              <input class="search" placeholder="search" type="text">
+                        <!-- TITLE -->
 
-              <button (click)="moveBackward()" mat-icon-button color="accent"
-                aria-label="Example icon-button with a heart icon">
-                <mat-icon>chevron_left</mat-icon>
-              </button>
-
-              <button (click)="moveForward()" mat-icon-button color="warn"
-                aria-label="Example icon-button with a heart icon">
-                <mat-icon>chevron_right</mat-icon>
-              </button>
+                        <div
+                          style="background-color: white;height: 60px;overflow-x: hidden;width: 283px;word-break: break-all;">
+                          <div class="mat-h2">{{item.concept}}</div>
+                        </div>
 
 
-              <button (click)="openDialog('mobileInfo', 'do')" mat-icon-button color="primary"
-                aria-label="Example icon-button with a heart icon">
-                <mat-icon>phone_iphone</mat-icon>
-              </button>
+                        <!-- HTML-CONTENT -->
+
+                        <mat-card-content
+                          style="width: 283px;height: 160px; overflow-y: scroll;background-color: white; overflow-x: hidden;">
+                          <div [innerHTML]="item.html"></div>
+                        </mat-card-content>
+
+                        <mat-card-actions fxLayoutAlign="end end">
+                          <button (click)="openDialog(item, 'edit')" mat-mini-fab class="post-button" color="primary">
+                            <mat-icon style="font-size: 18px;">create</mat-icon>
+                          </button>
+                          <button (click)="openDialog(item, 'delete')" mat-mini-fab class="post-button" color="primary">
+                            <mat-icon style="font-size: 20px;">cancel</mat-icon>
+                          </button>
+                        </mat-card-actions>
+
+                      </mat-card>
+
+                    </div>
+              
+                  </div>
+                </div>
+
+                <div class="col-md-4">
+                  <!-- NAMES BOX -->
+
+                  <div class="names-container">
+                    <div *ngFor="let  item of conceptData.concepts; let i = index">
+                      <span style="font-size:18px;margin: 10px;" matTooltip="Info about the action"
+                        matTooltipPosition="right">
+                        {{item.concept}}
+                      </span>
+                    </div>
+                  </div>
 
 
-              <button mat-icon-button aria-label="page" style="width: 100px;">
-                {{pageCounter}}
-              </button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                   <!-- MENU -->
+                   <mat-toolbar class="toolbar-postit mat-elevation-z4" *ngIf="mainMenu">
 
-              <button (click)="displayHelp(false)" mat-icon-button color="warn"
-                aria-label="Example icon-button with a heart icon">
-                <mat-icon style="color: green !important;">help</mat-icon>
-              </button>
+                    <button (click)="home()" mat-icon-button aria-label="Example icon-button with a heart icon"
+                      matTooltip="Info about the action" matTooltipPosition="above">
+                      <mat-icon>home</mat-icon>
+                    </button>
 
-            </mat-toolbar>
+                    <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
+                      <mat-icon>note_add</mat-icon>
+                    </button>
 
+                    <input class="search" placeholder="search" type="text">
+
+                    <button (click)="moveBackward()" mat-icon-button color="accent"
+                      aria-label="Example icon-button with a heart icon">
+                      <mat-icon>chevron_left</mat-icon>
+                    </button>
+
+                    <button (click)="moveForward()" mat-icon-button color="warn"
+                      aria-label="Example icon-button with a heart icon">
+                      <mat-icon>chevron_right</mat-icon>
+                    </button>
+
+
+                    <button (click)="openDialog('mobileInfo', 'do')" mat-icon-button color="primary"
+                      aria-label="Example icon-button with a heart icon">
+                      <mat-icon>phone_iphone</mat-icon>
+                    </button>
+
+
+                    <button mat-icon-button aria-label="page" style="width: 100px;">
+                      {{pageCounter}}
+                    </button>
+
+                    <button (click)="displayHelp(false)" mat-icon-button color="warn"
+                      aria-label="Example icon-button with a heart icon">
+                      <mat-icon style="color: green !important;">help</mat-icon>
+                    </button>
+
+                  </mat-toolbar>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
-
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
