--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -181,3 +181,10 @@
   margin-right: 8px;
   outline: none;
 }
+
+.name-form { 
+  position: fixed;
+  bottom: 173px;
+  width: 254px;
+  background-color: white;
+}
