copy but layput delaying on load

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -117,7 +117,7 @@
 
                         <mat-card-content
                           style="width: 283px;height: 160px; overflow-y: scroll;background-color: white; overflow-x: hidden;">
-                          <div [innerHTML]="item.html"></div>
+                          <div [innerHTML]="item.html">{{item.html}}</div>
                         </mat-card-content>
 
                         <mat-card-actions fxLayoutAlign="end end">
