--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -1,5 +1,5 @@
 <div *ngIf="infoMessage">
-    <form name="loginForm" [formGroup]="loginForm" novalidate class="nameform">
+   
 
 
         <div *ngIf="!isDeleting" class="mat-h2" style="text-align: center;">Are you sure you want to delete? </div>
@@ -32,14 +32,13 @@
             </div>
         </div>
 
-    </form>
 </div>
 <div *ngIf="!infoMessage" style="height: 500px;">
 
     <form name="loginForm" [formGroup]="loginForm" novalidate class="nameform" fxLayoutAlign="center center">
 
         <mat-form-field *ngIf="!isDeleting"  style="width: 550px;">         
-            <input matInput type="title" placeholder="title" formControlName="name">
+            <input matInput type="title" placeholder="title" formControlName="name" >
         </mat-form-field>
     </form>
 
@@ -48,17 +47,17 @@
         <div class="row">
             <div class="col">
                 <div>Key Words and Concepts</div>
-                <ckeditor [editor]="Editor" [data]="dataEditor"></ckeditor>
+                <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.editorData" ></ckeditor>
             </div>
             <div class="col">
                 <div>Name Candidates</div>
-                <ckeditor [editor]="Editor" [data]="dataEditor"></ckeditor>
+                <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.namesData" ></ckeditor>
             </div>
         </div>
     </div>
 
     <div fxLayoutAlign="end end">
-        <button (click)="buttonOption('dismiss')" class="refreshbutton" mat-mini-fab style="font-size: 8px;"
+        <button (click)="buttonOption('savePost')" class="refreshbutton" mat-mini-fab style="font-size: 8px;"
             color="success" aria-label="icon">
             <mat-icon>check</mat-icon>
         </button>
