update post it fix

--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -183,8 +183,8 @@
 }
 
 .name-form { 
-  position: fixed;
-  bottom: 173px;
-  width: 254px;
+  position: absolute;
+    bottom: 4px;
+    width: 254px;
   background-color: white;
 }
