--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -15,7 +15,7 @@
 
       <!-- PRESENTATION -->
       <div *ngIf="!createPostIt" fxLayoutAlign="center center" class="col">
-        <div class="presentation-box" [style]="slideBackground">
+        <div class="slide-box" [style]="slideBackground">
 
           <mat-toolbar class="toolbar mat-elevation-z4" *ngIf="mainMenu">
 
