--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -7,8 +7,23 @@
   background-size: cover;
   position: relative;
   top: 70px;
+  right: -76px;
   overflow: hidden;
 }
+
+.slide-box {
+  width: 950px;
+  height: 714px;
+  border: solid 4px lightgray;
+  border-radius: 6px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  top: 70px;
+  right: -26px;
+  overflow: hidden;
+}
+
 
 .toolbar {
   position: absolute;
@@ -40,7 +55,7 @@
   bottom: -58px;
   height: 50px;
   width: 550px;
-  margin-left: 210px;
+  margin-left: 265px;
   border-radius: 10px;
   opacity: 0.95;
 
@@ -69,7 +84,7 @@
   width: 941px;
   top: 73px;
   z-index: 9999;
-  margin-left: 5px;
+  margin-left: 80px;
   border-radius: 5px;
 }
 
@@ -95,7 +110,7 @@
   width: 293px;
   height: 630px;
   position: relative;
-  right: 85px;
+  right: 8px;
   top: 134px;
   overflow-x: hidden;
   overflow-y: scroll;
