--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -45,19 +45,23 @@
     <hr>
     <div class="mat-h3" style="text-align: center;color: #004684;">
         <div class="row">
-            <div class="col">
+            <div class="col-md-6">
                 <div>Key Words and Concepts</div>
                 <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.editorData" ></ckeditor>
             </div>
-            <div class="col">
+            <div class="col-md-1">  <button (click)="buttonOption('savePost')" class="refreshbutton" mat-button style="font-size: 8px;"
+                color="success" aria-label="icon">
+              SYNONYMS
+            </button></div>
+            <div class="col-md-5">
                 <div>Name Candidates</div>
-                <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.namesData" ></ckeditor>
+                <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.namesData" style="max-height: 400px;"></ckeditor>
             </div>
         </div>
     </div>
 
     <div fxLayoutAlign="end end">
-        <button (click)="buttonOption('savePost')" class="refreshbutton" mat-mini-fab style="font-size: 8px;"
+        <button (click)="buttonOption('savePost')" class="refreshbutton" mat-fab style="color: white;background-color: green;padding: 4px;outline: none;"
             color="success" aria-label="icon">
             <mat-icon>check</mat-icon>
         </button>
